<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Profile Picture -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_profile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/profile_pic"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircularImageView" />

    <!-- Search Icon -->
    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_icon"
        android:background="@color/color_white"
        android:padding="8dp" />

    <!-- Search Bar -->
    <EditText
        android:id="@+id/editText_search"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imageView_profile"
        android:layout_toStartOf="@id/search_icon"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search"
        android:padding="8dp"
        android:background="@drawable/search_bar_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:singleLine="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlock_your_potential"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:layout_marginTop="12dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp"
        android:background="@color/white"
        android:layout_below="@id/imageView_profile"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/headerTextView"
        android:layout_marginTop="-9dp"
        android:layout_marginBottom="17dp"
        android:paddingBottom="16dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottom_navigation"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@menu/bottom_nav_menu" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerTextView"
        android:layout_above="@id/bottom_navigation" />

</RelativeLayout>
