<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Login">

    <!-- Image View for Logo -->
    <ImageView
        android:id="@+id/user_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/user_image_desc"
        android:src="@drawable/logo" />

    <!-- Container for centering content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/user_image"
        android:layout_centerInParent="true">

        <!-- TextView -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome!"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>

        <!-- Input for Full Name -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />



        <!-- Input for Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:background="@drawable/input_background"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <!-- Signup Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="12dp"
            android:backgroundTint="@color/color_black"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <!-- Image -->
            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/google_icon"
                android:gravity="center"
                android:contentDescription="Google Sign In" />

            <!-- Text -->
            <TextView
                android:id="@+id/google_sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Continue with Google"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join Us..."
            android:id="@+id/signup_redirect"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="9dp"
            android:textStyle="italic"/>


    </LinearLayout>

</RelativeLayout>
