<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    tools:context=".MyaccountFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/left_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="My Account"
            android:textSize="22sp"
            android:textStyle="bold"
            android:contentDescription="@string/location"
            android:background="@color/color_white"
            android:padding="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/settings_icon"
            android:background="@color/color_white"
            android:padding="8dp" />
    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="50dp"
        android:padding="16dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="190dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_pic"
                    app:shapeAppearanceOverlay="@style/CircularImageView"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_pic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pick_image_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="132dp"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintEnd_toEndOf="@+id/profile_pic"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CircularImageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="Owusu Rockson"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@null" />



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="user@example.com"
                android:textSize="16sp"
                android:drawableStart="@drawable/baseline_email_24"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:background="@drawable/input_background"
               />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_pin"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:padding="12dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/input_background"
                android:hint="P.O.Box 293 Magreen Street" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_country"
                android:drawablePadding="10dp"
                android:background="@drawable/input_background"
                android:hint="Ghana" />



            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="+233 55 753 3568" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="Edit"
                android:elevation="6dp"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
